Change List to Immutable List